[package]
name = "rbwasm"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
openssl = { version = "0.10", features = ["vendored"] }
which = "4.2"
log = "0.4"
env_logger = "0.9"
siphasher = "0.3"
hex = "0.4"
num_cpus = "1.13"
wasi-vfs-mkfs = { path = "wasi-vfs/crates/wasi-vfs-mkfs" }
tempfile = "3.2"
ansi_term = "0.12"

[dev-dependencies]
rbwasm-test-support = { path = "crates/rbwasm-test-support" }

